Fixed overflow truncation in Firefox. It would be better to truncate .story-list instead of .rounded.

--- a/views/styles/site/container/story-list.styl
+++ b/views/styles/site/container/story-list.styl
@@ -1,4 +1,7 @@
 .story-list
+    .rounded
+        overflow hidden
+
     .list-story
         margin-bottom 1.4em
 
